--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "prop-types": "^15.8.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
+  },
+  "devDependencies": {
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.0"
   }
 }
